--- a/about.css
+++ b/about.css
@@ -18,7 +18,7 @@
     left: 0;
     width: 100%;
     z-index: 1000; /* Ensure it's above other content */
-    background-color: #1b2937;
+    background-color: white;
 }
 
 body {
